[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "yamlwrap"
description = "VCS-friendly documents in YAML"
authors = [{name = "Viktor Eikman", email = "viktor.eikman@gmail.com"}]
license = {text = "GPL-3.0-only"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control",
    "Topic :: Text Editors",
]
urls = {Homepage = "https://github.com/veikman/yamlwrap"}
requires-python = ">=3.8"
dependencies = [
    "PyYaml",
    "punwrap",
    "pyaml",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown; charset=UTF-8"

[project.optional-dependencies]
testing = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "yamlwrap.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 79
skip-string-normalization = true
