# -*- coding: utf-8 -*-
[metadata]
name = django-yamldoc
version = attr: yamldoc.__version__
description = Quoins for static sites
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/veikman/django-yamldoc
author = Viktor Eikman
author_email = viktor.eikman@gmail.com
license = GPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Version Control
    Topic :: Text Editors
    Topic :: Text Processing :: Markup :: Markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    PyYaml
    markdown
    ovid
    pyaml
    unidecode

[options.packages.find]
where = src
