# -*- coding: utf-8 -*-
[metadata]
name = yamlwrap
version = attr: yamlwrap.__version__
description = VCS-friendly documents in YAML
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/veikman/yamlwrap
author = Viktor Eikman
author_email = viktor.eikman@gmail.com
license = GPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Version Control
    Topic :: Text Editors

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    PyYaml
    pyaml
tests_require =
    pytest

[options.packages.find]
where = src

[tool:pytest]
testpaths =
    tests
